--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ documentation/*.synctex.gz
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/**/workspace.xml
+project/poliaktor_server/.idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
