--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,12 +1,44 @@
-FROM ubuntu:18.04
+FROM ubuntu:18.10
  
 # Update OS and create superuser
 RUN apt-get update && \
     apt-get -y upgrade
 
 RUN apt-get -y install python3-dev python3-pip
-# RUN apt-get -y install python-minimal python-pip
-# RUN pip2 install supervisor supervisor-stdout 
+
+RUN apt-get install -y --fix-missing \
+    build-essential \
+    cmake \
+    gfortran \
+    git \
+    wget \
+    curl \
+    graphicsmagick \
+    libgraphicsmagick1-dev \
+    libatlas-base-dev \
+    libavcodec-dev \
+    libavformat-dev \
+    libgtk2.0-dev \
+    libjpeg-dev \
+    liblapack-dev \
+    libswscale-dev \
+    pkg-config \
+    python3-dev \
+    python3-numpy \
+    software-properties-common \
+    zip \
+    && apt-get clean && rm -rf /tmp/* /var/tmp/*
+
+RUN cd ~ && \
+    mkdir -p dlib && \
+    git clone -b 'v19.9' --single-branch https://github.com/davisking/dlib.git dlib/ && \
+    cd  dlib/ && \
+    mkdir build && \
+    cd build && \
+    cmake .. && \
+    cmake --build . && \
+    cd .. && \
+    python3 setup.py install --yes
 
 # Install Python
 COPY reqs.txt .
@@ -20,16 +52,4 @@ RUN mkdir /app
 ENV HOME /app
 WORKDIR /app
 
-# ADD conf/supervisor.conf /etc/supervisor.conf
-# ADD conf/nginx.conf /etc/nginx/nginx.conf
-
-# # Server configuration
-# COPY conf .
-# RUN sudo supervisorctl reread && \
-#     sudo service supervisor restart && \
-#     sudo supervisorctl status
-
-# Run uwsgi server during startup from configuration file
-ENTRYPOINT ["supervisord", "-c", "/etc/supervisor.conf", "-n"]
-# ENTRYPOINT [ "python3", "main.py"]
-# ENTRYPOINT ["gunicorn", "-w", "2", "-b", "0.0.0.0:8000", "main:app"]
+ENTRYPOINT ["python3", "app.py"]
