animated plot and bunch of other things
- plt blocks flask thread
- dockerfile updated
- actor name available and displayed in forntend
- frontend layout in progress

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@
 .idea/
 __pycache__/
 .ipynb_checkpoints/
+.vscode
 
 images/
 images2/
+test_photos/
 
 ## Core latex/pdflatex auxiliary files:
 documentation/*.aux
