--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   poliactor_server:
-    image: wb:just_server
+    image: wb:poliaktor
     environment:
       FLASK_DEBUG: 1
       FLASK_ENV: development
@@ -12,7 +12,7 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ./project/poliaktor_server:/app
+      - ../project/poliaktor_server:/app
     # entrypoint:
     #   - flask
     #   - run
