--- a/notebooks/.vscode/settings.json
+++ b/notebooks/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/stelmchd/.pyenv/versions/cs_poliaktor/bin/python"
+    "python.pythonPath": "/Users/dstelmach/.pyenv/versions/jupyter3/bin/python"
 }
