--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,3 +1,4 @@
+face_recognition_models
 Click>=6.0
 dlib>=19.3.0
 numpy
@@ -9,4 +10,3 @@ Flask-SocketIO
 eventlet
 matplotlib
 scikit-learn
-face_recognition
